assert(_print_inlining_stream->size() > 0) failed: missing inlining msg

XMLWordPrintable

    • b01
    • generic
    • generic

        ADDITIONAL SYSTEM INFORMATION :
        OS: Ubuntu18.04
        $ java -version
        openjdk version "11.0.17-internal" 2022-10-18
        OpenJDK Runtime Environment (fastdebug build 11.0.17-internal+0-adhoc.root.jdk11u)
        OpenJDK 64-Bit Server VM (fastdebug build 11.0.17-internal+0-adhoc.root.jdk11u, mixed mode)

        A DESCRIPTION OF THE PROBLEM :
        JVM crashes with option " -XX:+PrintInlining -XX:+AlwaysIncrementalInline " on JDK11.

        Reproduce:

        $ java -XX:+PrintInlining -XX:+AlwaysIncrementalInline TestMethodHandleInvokesIntrinsic

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/root/jdk_source/jdk11u/src/hotspot/share/opto/compile.cpp:4494), pid=31355, tid=31396
        # assert(_print_inlining_stream->size() > 0) failed: missing inlining msg
        #
        # JRE version: OpenJDK Runtime Environment (11.0.17) (fastdebug build 11.0.17-internal+0-adhoc.root.jdk11u)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 11.0.17-internal+0-adhoc.root.jdk11u, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to /home/root/core.31355)


        ---------- BEGIN SOURCE ----------


        ---------- END SOURCE ----------

        FREQUENCY : always


          1. hotspot_pid1368807.log
            14 kB
            swati sharma
          2. hs_err_pid1368807.log
            64 kB
            swati sharma
          3. replay_pid1368807.log
            109 kB
            swati sharma
          4. TestMethodHandleInvokesIntrinsic.java
            2 kB
            swati sharma

              Assignee:
              Brian Stafford
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: