8292863: assert(_print_inlining_stream->size() > 0) failed: missing inlining msg

Reviewed-by: phh